<resources>
    <string name="app_name">ObservableScrollView for Android</string>
    <string name="title_activity_main">AOSV-Demos</string>
    <string name="title_activity_about">About this app</string>
    <string name="title_activity_actionbarcontrolgridview">GridView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrollistview">ListView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolrecyclerview">RecyclerView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolscrollview">ScrollView &amp; Action Bar</string>
    <string name="title_activity_actionbarcontrolwebview">WebView &amp; Action Bar</string>
    <string name="title_activity_flexiblespacetoolbarscrollview">Flexible Space</string>
    <string name="title_activity_flexiblespacewithimagescrollview">Flexible Space</string>
    <string name="title_activity_fillgap3listview">Another implementation of Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgap3recyclerview">Another implementation of Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgap3scrollview">Another implementation of Fill Gap &amp; ScrollView</string>
    <string name="title_activity_fillgaplistview">Fill Gap &amp; ListView</string>
    <string name="title_activity_fillgaprecyclerview">Fill Gap &amp; RecyclerView</string>
    <string name="title_activity_fillgapscrollview">Fill Gap &amp; ScrollView</string>
    <string name="title_activity_flexiblespacewithimagelistview">Flexible Space</string>
    <string name="title_activity_fragmentactionbarcontrollistview">ListView on Fragment &amp; Action Bar</string>
    <string name="title_activity_fragmenttransition">ActionBar &amp; Toolbar manipulation with Fragment</string>
    <string name="title_activity_handletouchgridview">Handling touch with GridView</string>
    <string name="title_activity_handletouchlistview">Handling touch with ListView</string>
    <string name="title_activity_handletouchrecyclerview">Handling touch with RecyclerView</string>
    <string name="title_activity_handletouchscrollview">Handling touch with ScrollView</string>
    <string name="title_activity_handletouchwebview">Handling touch with WebView</string>
    <string name="title_activity_parallaxtoolbarscrollview">Parallax scrollView &amp; toolbar</string>
    <string name="title_activity_scrollfrombottomlistview">ListView, scrolling from bottom</string>
    <string name="title_activity_scrollfrombottomrecyclerview">RecyclerView, scrolling from bottom</string>
    <string name="title_activity_slidingupgridview">Sliding up effect with GridView</string>
    <string name="title_activity_slidinguplistview">Sliding up effect with ListView</string>
    <string name="title_activity_slidinguprecyclerview">Sliding up effect with RecyclerView</string>
    <string name="title_activity_slidingupscrollview">Sliding up effect with ScrollView</string>
    <string name="title_activity_slidingupwebview">Sliding up effect with WebView</string>
    <string name="title_activity_toolbarcontrollistview">ListView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_toolbarcontrolrecyclerview">RecyclerView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_toolbarcontrolscrollview">ScrollView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_toolbarcontrolwebview">WebView &amp; Quick return toolbar &amp; Sticky view</string>
    <string name="title_activity_viewpagertabfragment">ViewPager &amp; Tab on Fragment</string>
    <string name="title_activity_viewpagertab2">Another implementation of ViewPagerTabActivity</string>
    <string name="title_activity_viewpagertab">ViewPager &amp; Tab &amp; Different fragments</string>
    <string name="title_activity_viewpagertablistview">ViewPager &amp; Tab &amp; ListView</string>
    <string name="title_activity_viewpagertabscrollview">ViewPager &amp; Tab &amp; ScrollView</string>
    <string name="msg_app_version">App Version: %1$s (Build: %2$s)</string>
    <string name="msg_lib_version">Library Version: %1$s</string>
    <string name="msg_copyright">© 2014 Soichiro Kashima All rights reserved.</string>
    <string name="msg_about_description">Demo app for Android-ObservableScrollView.</string>
    <string name="msg_about_fork_me_on_github">Fork me on GitHub!</string>
    <string name="msg_about_github_url">https://github.com/ksoichiro/Android-ObservableScrollView</string>
    <string name="msg_about_library_description">Android-ObservableScrollView is a library to observe scroll events for scrollable views.</string>
    <string name="msg_android_trademark">Android is a trademark of Google Inc.</string>
    <string name="desc_about_app">About this app</string>
</resources>